--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-  
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
- 
+    <span class="loader hidden"></span>
 
+    <form class="search-form">
+      <input type="text" name="search" placeholder="Search images..." />
+      <button type="submit" name="submitBtn">Search</button>
+    </form>
+    <ul class="gallery"></ul>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
