--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
       <input type="text" name="search" placeholder="Search images..." />
       <button type="submit" name="submitBtn">Search</button>
     </form>
-    <ul class="gallery"></ul>
+    <div class="container">
+      <ul class="gallery"></ul>
+      <button class="js-loadbtn hidden">Load more</button>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
